@@ -11,5 +11,13 @@ java_sources = \
 
 PACKAGE_FNAME = gnu-kawa-brl
 GCJ_INPUTS =  $(java_Java)
+java_SCM = progfun.scm
+SOURCES = $(java_SCM) $(java_sources)
+KAWA1 = $(@GCJ_COMPILED_SELECTED@_KAWA1)
+EXTRA_DIST = $(java_SCM)
 
-all: Makefile java-classes.stamp $(@GCJ_COMPILED_SELECTED@)
+../../../kawa/java-classes.stamp:
+	cd ../../../kawa; $(MAKE)
+
+all: Makefile java-classes.stamp ../../../kawa/java-classes.stamp \
+  scm-classes.stamp  $(@GCJ_COMPILED_SELECTED@)
