@@ -1,3 +1,8 @@
+2002-02-13  Per Bothner  <per@bothner.com>
+
+	* progfun.scm:  Moved from gnu.brl.
+	* Makefile.am: Update accordingly.
+
 2002-01-31  Per Bothner  <per@bothner.com>
 
 	* BRL (<init>):  Also do loadClass of gnu.kawa.servlet.HTTP.
